--- a/details.html
+++ b/details.html
@@ -37,9 +37,9 @@
     <main id="main_details">
         <div id="card_details">
             <div class="card" id="card_details2">
-                <img id="card_details_img" src="./assets/books.jpg" class="card-img-top" alt="...">
+                <img id="card_details_img" src="./assets/costume_party.jpg" class="card-img-top" alt="...">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Halloween Night</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis
                         inventore vero sint perspiciatis repudiandae! Quibusdam vel mollitia impedit enim amet, officia
                         perferendis, incidunt recusandae ea non sequi alias nemo.
@@ -62,7 +62,7 @@
 
     </main>
 
-    <footer id="footer" class="px-5">
+    <footer id="footer_details" class="footer px-5">
         <div class="w-50">
             <a href="#"><img src="./assets/facebook.png" alt=""></a>
             <a href="#"><img src="./assets/instagram.png" alt=""></a>
