--- a/contacts.html
+++ b/contacts.html
@@ -58,7 +58,7 @@
                     <img class="d-block w-100" src="./assets/optional_banner_4.jpg" alt="Four slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/optional_banner_5.jpg" alt="Five slide" >
+                    <img class="d-block w-100" src="./assets/optional_banner_5.jpg" alt="Five slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -71,19 +71,20 @@
             </a>
         </div>
 
-        <from id="formulario_contact" class="d-flex flex-column justify-content-center">
+        <form id="formulario_contact" class="d-flex flex-column justify-content-center">
             <label for="nombre">Name:</label>
             <input type="text" id="nombre">
             <label for="email">Email:</label>
             <input type="email" name="email" id="email">
             <label for="mensaje">Message:</label>
             <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
-            <button class="btn btn-outline-success" type="submit">Submit</button>
-        </from>
+            <button class="btn btn-outline-success" id="boton" type="submit">Submit</button>
+        </form>
+
 
     </main>
 
-    <footer id="footer" class="px-5">
+    <footer id="footer" class="footer px-5">
         <div class="w-50">
             <a href="#"><img src="./assets/facebook.png" alt=""></a>
             <a href="#"><img src="./assets/instagram.png" alt=""></a>
