--- a/stats.html
+++ b/stats.html
@@ -72,12 +72,10 @@
         </div>
 
         <table>
-            <thead>
-                <tr>
+            <tbody>
+                <tr class="thead">
                     <th colspan="3">Events Stadistic</th>
                 </tr>
-            </thead>
-            <tbody>
                 <tr class="tabla_titulo">
                     <td>Events with highest % of asistence</td>
                     <td>Events with lowest % of assistence</td>
@@ -90,12 +88,10 @@
                 </tr>
             </tbody>
 
-            <thead>
-                <tr>
+            <tbody>
+                <tr class="thead">
                     <th colspan="3">Upcoming events stadistic by category</th>
                 </tr>
-            </thead>
-            <tbody>
                 <tr class="tabla_titulo">
                     <td>Category</td>
                     <td>Revanues</td>
@@ -113,12 +109,10 @@
                 </tr>
             </tbody>
 
-            <thead>
-                <tr>
+            <tbody>
+                <tr class="thead">
                     <th colspan="3">Past events statistics by category</th>
                 </tr>
-            </thead>
-            <tbody>
                 <tr class="tabla_titulo">
                     <td>Category</td>
                     <td>Revanues</td>
@@ -137,10 +131,11 @@
             </tbody>
         </table>
         
+        
 
     </main>
 
-    <footer id="footer" class="px-5">
+    <footer id="footer" class="footer px-5">
         <div class="w-50">
             <a href="#"><img src="./assets/facebook.png" alt=""></a>
             <a href="#"><img src="./assets/instagram.png" alt=""></a>
