--- a/index.html
+++ b/index.html
@@ -113,97 +113,7 @@
         </div>
 
         <section id="section_cards" class="d-flex justify-content-center px-5">
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/books.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">School Book Fair</h5>
-                    <p class="card-text">
-                        Bring your unused school book and bring the one you need.
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex" >
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/costume_party.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Halloween Night</h5>
-                    <p class="card-text">
-                        Come in your scariest costume character to win amazing prizes.
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex">
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/cinema.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Avengers</h5>
-                    <p class="card-text">
-                        "Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes".
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex" id="card_botones">
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/food_fair.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Festival of the collectivities</h5>
-                    <p class="card-text">
-                        Enjoy your favorite dishes from different countries in a unique event for the whole family.
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex">
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/marathon.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">10K for life</h5>
-                    <p class="card-text">
-                        Come and exercise, improve your health and lifestyle.
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex">
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/music_concert.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Metallica in concert</h5>
-                    <p class="card-text">
-                        The only concert of the most emblematic band in the world.
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex">
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top w-100 h-50" src="./assets/outing_to_the_museum.jpg" alt="Card image cap">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Art Exhibition</h5>
-                    <p class="card-text">
-                        Let's go to the art museum for an incredible tour to learn about the largest dinosaurs
-                    </p>
-                    <div class="card_botones card_div_price_buton d-flex">
-                        <h5 class="price">10.000$</h5>
-                        <a href="./details.html" class="btn">Ver mas detalles</a>
-                    </div>
-                </div>
-            </div>
+            
         </section>
     </main>
 
@@ -215,6 +125,9 @@
         </div>
         <span>Rocio Crespo - AP Desarrollo web 01 TM</span>
     </footer>
+
+    <script src="./js/data_base.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
