--- a/details.html
+++ b/details.html
@@ -36,33 +36,12 @@
 
     <main id="main_details">
         <div id="card_details">
-            <div class="card" id="card_details2">
-                <img id="card_details_img" src="./assets/costume_party.jpg" class="card-img-top" alt="...">
-                <div class="card-body p-5">
-                    <h5 class="card-title">Halloween Night</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis
-                        inventore vero sint perspiciatis repudiandae! Quibusdam vel mollitia impedit enim amet, officia
-                        perferendis, incidunt recusandae ea non sequi alias nemo.
-                        Blanditiis qui atque nam, aliquid delectus ullam architecto repellendus quae quidem tempora
-                        doloremque ducimus debitis quos assumenda distinctio illo esse quo facere, ut molestiae
-                        perspiciatis quod beatae? Sapiente, veniam deleniti!
-                        Magni perspiciatis velit nam quas impedit officia numquam recusandae ad fugiat maxime
-                        perferendis, sed tenetur autem placeat. Dolores, deserunt. Perferendis mollitia architecto atque
-                        et qui dicta incidunt vitae cupiditate sint?
-                        Dolorem ducimus cupiditate fuga quisquam repudiandae voluptatibus quos esse officiis nisi
-                        voluptate vitae modi laboriosam autem nesciunt repellat impedit nobis, minima voluptatum ab
-                        recusandae alias quas hic praesentium tenetur. Iure!
-                        Fugit quisquam facere minus et consequatur quidem mollitia! Sapiente saepe dolorem optio iste
-                        repellendus, eveniet perspiciatis qui. Odio cum quas sed id officia quis reprehenderit aperiam
-                        adipisci harum eius! Ipsum!
-                        </p>
-                </div>
-            </div>
+
         </div>
 
     </main>
 
-    <footer id="footer_details" class="footer px-5">
+    <footer id="footer_absolute" class="footer px-5">
         <div class="w-50">
             <a href="#"><img src="./assets/facebook.png" alt=""></a>
             <a href="#"><img src="./assets/instagram.png" alt=""></a>
@@ -70,6 +49,9 @@
         </div>
         <span>Rocio Crespo - AP Desarrollo web 01 TM</span>
     </footer>
+
+    <script src="./js/data.js"></script>
+    <script src="./js/details.js"></script>
 </body>
 
 </html>
