--- a/stats.html
+++ b/stats.html
@@ -135,7 +135,7 @@
 
     </main>
 
-    <footer id="footer" class="footer px-5">
+    <footer id="footer_absolute" class="footer px-5">
         <div class="w-50">
             <a href="#"><img src="./assets/facebook.png" alt=""></a>
             <a href="#"><img src="./assets/instagram.png" alt=""></a>
