--- a/upcomming_events.html
+++ b/upcomming_events.html
@@ -73,37 +73,9 @@
 
         <div id="div_filtros" class="d-flex align-items-center ">
             <div class="w-75" id="div_filtros_div">
-                <label for="food" class="d-inline-block ">
-                    <input type="checkbox" name="food" id="food">
-                    <span>Food Fair</span>
-                </label>
-                <label for="museum" class="d-inline-block">
-                    <input type="checkbox" name="museum" id="museum">
-                    <span>Museum</span>
-                </label>
-                <label for="costume" class="d-inline-block ">
-                    <input type="checkbox" name="costume" id="costume">
-                    <span>Costume Party</span>
-                </label>
-                <label for="music" class="d-inline-block">
-                    <input type="checkbox" name="music" id="music">
-                    <span>Music Concert</span>
-                </label>
-                <label for="race" class="d-inline-block">
-                    <input type="checkbox" name="race" id="race">
-                    <span>Race</span>
-                </label>
-                <label for="book" class="d-inline-block">
-                    <input type="checkbox" name="book" id="book">
-                    <span>Book Exchange</span>
-                </label>
-                <label for="cinema" class="d-inline-block">
-                    <input type="checkbox" name="cinema" id="cinema">
-                    <span>Cinema</span>
-                </label>
             </div>
             <nav class="navbar navbar-light bg-light">
-                <form class="d-flex">
+                <form class="d-flex" id="form_busqueda" action="">
                     <input id="input_search" class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button id="boton_busqueda" class="btn btn-outline-success my-2 my-sm-0" type="submit">
                         Search
@@ -113,7 +85,6 @@
         </div>
 
         <section id="section_cards" class="d-flex justify-content-center px-5">
-            
         </section>
     </main>
 
@@ -126,8 +97,10 @@
         <span>Rocio Crespo - AP Desarrollo web 01 TM</span>
     </footer>
 
-    <script src="./js/data_base.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/main.js"></script>
     <script src="./js/upcomming_events.js"></script>
 </body>
 
+</html>
 </html>
