--- a/details.html
+++ b/details.html
@@ -17,7 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Details</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
         <span>Rocio Crespo - AP Desarrollo web 01 TM</span>
     </footer>
 
-    <script src="./js/data.js"></script>
+    <script src="./js/main.js"></script>
     <script src="./js/details.js"></script>
 </body>
 
