--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -17,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -97,9 +98,8 @@
         <span>Rocio Crespo - AP Desarrollo web 01 TM</span>
     </footer>
 
-    <script src="./js/data.js"></script>
-    <script src="./js/main.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
